<?xml version="1.0"?>
<package>
  <name>orne_maps</name>
  <version>0.0.1</version>
  <description>orne_maps provides sharing maps for Tsukuba Challenge</description>

  <maintainer email="d.maekawa@rapyuta-robotics.com">Daiki Maekawa</maintainer>

  <license>BSD</license>
  
  <author email="d.maekawa@rapyuta-robotics.com">Daiki Maekawa</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
